[package]
name = "pbjson-test-any"
version = "0.2.3"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Test resources for pbjson converion"
repository = "https://github.com/influxdata/pbjson"

[dependencies]
prost = "0.9"
pbjson-any = { path = "../pbjson" }
pbjson-types-any = { path = "../pbjson-types" }
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"

[dev-dependencies]
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
prost-build = "0.9"
pbjson-build-any = { path = "../pbjson-build" }
