[package]
name = "pbjson-types-any"
version = "0.2.3"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
description = "Protobuf well known types with serde serialization support"
edition = "2021"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/influxdata/pbjson"

[dependencies] # In alphabetical order
bytes = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
pbjson-any = { path = "../pbjson", version = "0.2" }
prost = "0.9"
prost-wkt = "0.3"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"

[dev-dependencies]
serde_json = "1.0"

[build-dependencies] # In alphabetical order
pbjson-build-any = { path = "../pbjson-build", version = "0.2" }
prost-build = "0.9"
