[package]
name = "pbjson"
version = "0.2.2"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Utilities for pbjson conversion"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/influxdata/pbjson"

[dependencies]
base64 = "0.13"
prost-wkt = "0.3"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"

[dev-dependencies]
bytes = "1.0"
rand = "0.8"
